postgresql, rabbitmq 도커 컴포즈

--- a/docker-compose/rabbitmq-postgresql/docker-compose.yml
+++ b/docker-compose/rabbitmq-postgresql/docker-compose.yml
@@ -18,3 +18,4 @@ services:
       POSTGRES_PASSWORD: 1111
     volumes:
       - '~/env/docker/postgres/volumes/local-postgres:/var/lib/postgresql/data'
+      - './dump:/docker-entrypoint-initdb.d'
